--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -47,44 +47,39 @@ Stanford University \\
 \maketitle
 
 \begin{abstract}
-Previous work in \textit{aspect-level sentiment analysis}---identifying the sentiment associated with various attributes of a product---have mostly been formulated as supervised learning problems, requiring labels of both the relevant aspects and their sentiment. Acquiring labels for sufficiently large datasets are however often costly and time consuming. Here we propose a largely unsupervised method for aspect-level sentiment analysis that consists of two steps: 1) discovery and extraction of aspects from product reviews via clustering of \texttt{word2vec} representations, 2) classifying aspect-specific sentiments using convolutional neural networks.
+Previous work in \textit{aspect-level sentiment analysis}---identifying the sentiment associated with various attributes of a product---have mostly been formulated as supervised learning problems, requiring labels of both the relevant aspects and their sentiment. Acquiring labels for sufficiently large datasets are however often costly and time consuming. Here we propose a largely unsupervised and scalable method for aspect-level sentiment analysis that consists of two steps: 1) discovery and extraction of aspects from product reviews via clustering of \texttt{word2vec} [i-ii] representations, 2) classifying aspect-specific sentiments using convolutional neural networks.
 \end{abstract}
 
 \section{Introduction}
 
-In this day and age, consumers have unprecedented access to a deluge of information---most notably, product reviews written by other consumers---with which to make his or her purchase decisions. Unfortunately, sifting through hundreds of reviews across tens of different websites to acquire specific information about the product and its important attributes (e.g. \textit{battery life}, \textit{screen size}, or \textit{weight} in the case of electronic products) is a time-consuming chore. We attempt to tackle the two separate but interconnected components of this problem: 1) automatic discovery of aspects, and () aspect-specific sentiment analysis.
+In this day and age, consumers have unprecedented access to a deluge of information about products---most notably reviews written by other consumers---with which to make his or her purchase decisions. Unfortunately, sifting through hundreds of reviews across tens of different websites to acquire specific information about the product and its important attributes (e.g. \textit{battery life}, \textit{screen size}, or \textit{weight} in the case of electronic products) is a time-consuming chore. Aspect-level sentiment analysis would allow consumers to effortlessly compare general sentiments of various aspects of multiple similar products.
 
-Within the context of a product review, the first component, \textit{aspect discovery}, involves identifying individual ``aspects" (which could be the product itself, or features/attributes of the product). This is made more difficult by the fact that relevant aspects might differ greatly across products in the same category. For example, aspects revelant to a cellular phone might be \textit{battery life}, \textit{screen size}, \textit{weight} and \textit{cost}. Not all these aspects are relevant across electronic items: for instance, \textit{screen size} might be irrelevant for a pair of headphones or a video game controller.
+However, one of the biggest challenges in training aspect-specific sentiment analysis models is the lack of large datasets labeled with sentiment on the aspect-level (most datasets with sentiment labels existed on a document level). In this report, we propose a scalable method for extracting and classifying aspect-specific sentiments that is largely unsupervised. To do this, we tackle two separate but interconnected components of this problem: 1) discovery of aspects, and 2) aspect-specific sentiment classification.
 
-The second component, \textit{aspect-specific sentiment analysis} involves subsequently identifying the sentiment---positive, neutral, or negative judgments---associated with aspects [1-6]. This essentially boils down to solving $n$ separate sentiment analysis problems per document, where $n$ is the number of aspects, and doing proper assignment of sentiment to aspects. Needless to say, this is a challenging task that is starting to receive much attention by researchers in the past few years.
+Within the context of a product review, the first component, \textit{aspect discovery}, involves identifying individual ``aspects" (which could be the product itself, or features/attributes of the product). This is made more difficult by the fact that relevant aspects might differ greatly across products in the same category. For example, aspects revelant to a cellular phone might be \textit{battery life}, \textit{screen size}, \textit{weight} and \textit{cost}. Not all these aspects are relevant across electronic items: for instance, \textit{screen size} might be irrelevant for a pair of headphones or a video game controller. We tackle this problem by generating new aspects from a list of seed words based on cosine similarities of the \texttt{word2vec} representations [i-ii], and using the discovered aspects to train an aspect classifier.
 
-One of the challenges is the lack of large labeled datasets with which to train supervised models. In this paper, we propose a scalable hybrid method that is almost entirely unsupervised, that enables learning of aspect-specific sentiment on large datasets.
-
-
-
-
+The second component, \textit{aspect-specific sentiment classification} involves identifying the sentiment associated with each aspect [1-6]---\textit{very positive, positive neutral, negative or very negative}. We approach this problem by first using a lexicon-based heuristic as a baseline and as a means of \textit{pre-labeling} the data. We then refined the labels and trained a convolutional neural network [Yoon Kim] to tackle the sentiment analysis problem as a sentence classification problem.
 
 \section{Related work}
 
-\textbf{Aspect Discovery}: Previous methods have used graphical models to attempt to extract latent sentiment.[1-3] use Latent Dirichlet Allocation, while [4] uses a Conditional Random Field model to model latent aspects. In particular, most of these methods have a generative model where there is a latent aspect (drawn from a mix of ``global" and ``local" topics [1-2], or latent to each sentence [3])
 
-We propose using similar unsupervised methods to generate candidate aspects via semantic word vector representations. 
+\textbf{Aspect Discovery}: Previous methods have used graphical models to attempt to extract latent sentiment. [1-3] use Latent Dirichlet Allocation, while [4] uses a Conditional Random Field model to model latent aspects. In particular, most of these methods have a generative model where there is a latent aspect (drawn from a mix of ``global" and ``local" topics [1-2], or latent to each sentence [3]). 
 
-In this paper, we propose extending recent successful advances in deep learning [6-7] to address this problem. In particular, we seek to improve and extend the work in [6], who used deep learning architectures like the Recursive Neural Tensor Network (RNTN) to extract aspect and sentiment in a single step. Unfortunately, supervised methods (e.g. [5-7]) that require labeled aspects-sentiment pairs for training are unscalable, and a better approach would be to automatically identify relevant aspects for each product (which, e.g. [1-3] try to do via topic modeling). 
+% Add in "Simpler is better" paper
 
+\textbf{Aspect-specific Sentiment Classification}: There has been recent work on using convolutional neural networks (CNN) trained on top of pre-trained word vectors for sentence-level classification tasks [Kim]. Specifically, [Kim] demonstrated the use of CNN to outperform state-of-the-art models on sentiment analysis classification tasks. Other deep learning approaches for aspect-based sentiment analysis use hierarchical models such as a Recursive Neural Tensor Network (RNTN) to extract aspect-sentiment tuples. Unfortunately, such supervised methods (e.g. [5-7]) that require labeled aspects-sentiment pairs for training are unscalable, and a better approach would be to automatically identify relevant aspects for each product (which, e.g. [1-3] try to do via topic modeling). 
 
-
+% TODO: Desmond to add more references?
 
 \section{Approach}
 
-Our proposed workflow can be divided into two main parts: (unsupervised) {\bf Aspect Discovery} and {\bf Aspect-Specific Sentiment Extraction}. See Fig. \ref{workflow} for an illustration.
-
+Our proposed workflow can be divided into two main parts: {\bf Aspect Discovery} and {\bf Aspect-Specific Sentiment Classification}. See Fig. \ref{workflow} for an illustration.
 
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width=.85\columnwidth]{workflow.png}
 \end{center}
-\caption{Proposed Workflow. We first use a word2vec representation to discover new aspects, and to identify aspects in the data. Next, we classify the sentiment of the surrounding context. This generates a labeled dataset on which we train a deep CNN to perform aspect-specific sentiment extraction.}% Except for the Sentiment Labeling and Visualization processes, every other process involves deep learning.}
+\caption{Proposed Workflow. We generate a list of seed aspects specific to the product category. We then discover neighboring aspects based on cosine distances of the seed aspects' \texttt{word2vec} representations. We then train a \textit{window aspect classifier} to discover more aspects from raw text. Next, we use a lexicon-based heuristic to \textit{pre-label} the expanded list of aspects to generate labels that are subsequently refined by hand. Lastly, we train a supervised CNN to do the \textit{aspect-specific sentiment classification} to produce \texttt{(aspect, sentiment)} tuples.}
 \label{workflow}
 \end{figure}
 
@@ -230,6 +225,11 @@ We would like to acknowledge funding for computing resources provided by the Dee
 \subsubsection*{References} % chronological. Use APA
 
 \small{
+
+%Word2Vec papers
+[i] Mikolov, T. \& Chen, K. \& Corrado, G. \& Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space. In Proceedings of Workshop at ICLR, 2013.
+
+[ii] Mikolov, T. \& Chen, K. \& Corrado, G. \& Dean, J. (2013). Distributed Representations of Words and Phrases and their Compositionality. In Proceedings of NIPS, 2013.
 
 [1] Titov, I., \& McDonald, R. T. (2008). A Joint Model of Text and Aspect Ratings for Sentiment Summarization. In {\it ACL} (Vol. 8, pp. 308-316).
 
