--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -73,7 +73,7 @@ We propose using similar unsupervised methods to generate candidate aspects via 
 In this paper, we propose extending recent successful advances in deep learning [6-7] to address this problem. In particular, we seek to improve and extend the work in [6], who used deep learning architectures like the Recursive Neural Tensor Network (RNTN) to extract aspect and sentiment in a single step. Unfortunately, supervised methods (e.g. [5-7]) that require labeled aspects-sentiment pairs for training are unscalable, and a better approach would be to automatically identify relevant aspects for each product (which, e.g. [1-3] try to do via topic modeling). 
 
 
-
+[aspect parser paper]: rule-based approach to extracting aspects
 
 \section{Approach}
 
@@ -101,7 +101,7 @@ The first part of our workflow involves an unsupervised approach to generating a
 
 NER Model architecture
 
-Recurrent Neural Network
+Window Aspect Classifier
 
 \subsection{Aspect-Specific Sentiment Extraction}
 
@@ -150,7 +150,7 @@ As shown in Fig. \ref{aspectFig}, words like \texttt{portability} returned many 
 
 \subsubsection{ Aspect detection model }
 
-We extracted sentences with aspects that were within our discovered aspect list, and labeled each word as either being an aspect, or not. This served as the input to an RNN with some hyperparameters FIXME, . 
+We extracted sentences with aspects that were within our discovered aspect list, and labeled each word as either being an aspect, or not. This served as the input to a window aspect classifier with some hyperparameters FIXME, . 
 
 
 \subsection{Aspect-Specific Sentiment Extraction}
@@ -180,7 +180,7 @@ We must be upfront and say that our point of performing this was \textbf{not} to
 \begin{center}
 \begin{tabular}{lll}
 \multicolumn{1}{c}{\bf Aspect Detection Model}  &\multicolumn{1}{c}{\bf Recall}  \\ \hline
-Recurrent Neural Network \textsuperscript{1} & 8X.X\% \textbf{(FIXME)} \\
+Sliding Window Classifier \textsuperscript{1} & 8X.X\% \textbf{(FIXME)} \\
 &\\
 \end{tabular}
 \begin{tabular}{lll}
