--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -95,7 +95,7 @@ Our proposed workflow can be divided into two main parts: {\bf Aspect Discovery}
 \subsection{Aspect Discovery}
 
 \subsubsection{Generating Seed Aspects}
-The first part of our workflow involves generating a list of seed aspects. These seed aspects do not require domain-specific knowledge and can be fairly general (the idea is that any layperson should be able to generate these words about most product categories). In our case, we generated 63 seed aspects specific to electronic products such as \textit{screen quality, construction, durability, cost}. 
+The first part of our workflow involves generating a list of seed aspects. These seed aspects do not require domain-specific knowledge and can be fairly general (the idea is that any layperson should be able to generate these words about most product categories). In our case, we generated 56 seed aspects specific to electronic products such as \textit{screen quality, construction, durability, cost}. 
 
 \subsubsection{Aspect Discovery}
 To generate aspects in an unsupervised fashion, we trained a \texttt{word2vec} model on our dataset and discovered neighboring aspects based on cosine distances to the seed aspects' word vector representations. Our intuition is that we can use similarities in a high dimensional word vector embedding space to find closely related groups of words. Words may be grouped by syntactic class (e.g. nouns), by similarity in context (e.g. ``X is great"), or by other words that they co-occur with.
@@ -120,7 +120,7 @@ where $y \in \mathbb{R}^2$ is a one-hot label vector. When computing the loss fo
 
 \subsection{Aspect-Specific Sentiment Classification}
 % TODO
-\subsubsection{Pre-labeling}
+\subsubsection{Pre-labeling using Lexicon-based Heuristic}
 
 \subsubsection{Sentiment Classification}
 
@@ -147,12 +147,9 @@ We decided upon a Convolutional Neural Network (CNN) Model based after Kim [10],
 
 \section{Experimental Results} 
 
-\subsection{Aspect Discovery Model Training} 
+\subsection{Aspect Discovery} 
 
-We trained three different word2vec models. The most successful model was trained using the CBOW (continuous bag-of-words) model with a window size of 10 and feature dimension size of 300. We also ignored all words with total frequency count below 40 (this helped to remove many misspellings). We determined the performance of each model by querying the model with various aspects common to electronic products (e.g. "portability", "screen quality", etc).
-
-\subsection{word2vec Results}
-
+\subsubsection{word2vec Model}
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width=\columnwidth]{Aspects_long.png}
@@ -161,18 +158,45 @@ We trained three different word2vec models. The most successful model was traine
 \label{aspectFig}
 \end{figure}
 
-We queried our word2vec model and returned the top-$n$ results based on cosine similarity of the word vectors, as illustrated in Figure \ref{aspectFig}. After qualitative evaluation, we found that $n=5$ is a good number that maintains the quality of aspects while allowing a good discovery ratio.
+We trained three different \texttt{word2vec} models. The most successful model was trained using the CBOW (continuous bag-of-words) model with a window size of 10 and feature dimension size of 300. We also ignored all words with total frequency count below 40 (this helped to remove many misspellings and typos). We determined the performance of each model by querying the model with various aspects common to electronic products (e.g. "portability", "screen quality", etc) and returning the top-$n$ closest attributes based on cosine similarity.
+
+Figure \ref{aspectFig} illustrates the top-$n$ closest results for the seed words \texttt{portability}, \texttt{contrast}, and \texttt{tripod}. After qualitative evaluation, we found that $n=5$ is a good number that maintains the quality of aspects while allowing for good discovery.
 
 As shown in Fig. \ref{aspectFig}, words like \texttt{portability} returned many synonyms as well as product aspects that are related to it (e.g. \texttt{ruggedness} and \texttt{simplicity}). Our model is also capable of returning aspects that are specific and unique to the product category it is trained on. In this case of electronic products, a query like \texttt{contrast} returned words like \texttt{shadow\_detail}, \texttt{dynamic\_range}, \texttt{black\_levels} and \texttt{gamma}, which are aspects specific to devices like monitor displays and cameras. Finally, the query \texttt{tripod} returned various aspects of camera tripods, many of them being features that are non-obvious to the layperson. For instance, \texttt{ball\_head} refers to a type of ball-shaped tripod head that allows free-pivoting along two rotational axes (as opposed to Cartesian axes), and \texttt{quick\_release} refers to tripod mounts that come with a quick-release plate. Many of these queries would otherwise perform poorly if performed on lexical databases like WordNet.
 
+We also found that out of 336 discovered aspects (56*5 neighboring aspects + 56 seed aspects), only 9 words are considered to be non-aspect words, giving us an accuracy of \textbf{97.32\%}. We also found that the aspect discovery process was useful in discovering unintuitive but highly related words such as acronyms (e.g. \texttt{ui} and \texttt{gui}, \texttt{kb} and \texttt{keyboard}), common typos (e.g. \texttt{qaulity}, \texttt{quaility}) and synonymous words (e.g. \texttt{trackpad}, \texttt{touchpad}).
 
-\subsubsection{ Aspect detection model }
+\subsubsection{Window Aspect Classifier}
+We performed hyperparameter tuning on our window classifier and found that window of size 5, regularization strength of 0.001 and learning rate of 0.01 using a minibatch schedule produced the best performing model. This was trained on a randomly sampled subset of 20,000 sentences, each of which containing at least one aspect. The training dataset consists of 48,368 \texttt{ASP}-labeled words and 848,218 \texttt{O}-labeled words. 
 
-We extracted sentences with aspects that were within our discovered aspect list, and labeled each word as either being an aspect, or not. This served as the input to a window aspect classifier with some hyperparameters FIXME, . 
+As our dataset is heavily unbalanced (towards having 95\% positive \texttt{ASP} examples), we evaluate our window aspect classifier primarily by its abiliity to recall positive example (i.e. intuitively the ability of the classifier to find all the aspects). In this case, our best performing classifier has an \texttt{ASP} recall of \textbf{92.45\%} and a precision of \textbf{99.15\%}, i.e. it is capable of finding 92.45\% of the aspects and practically did not mislabel any non-aspect words as aspects.
 
+\subsection{Aspect-specific Sentiment Classification}
 
-\subsection{Aspect-Specific Sentiment Extraction}
+\begin{table}[t]
+\begin{center}
+\begin{tabular}{lll}
+\multicolumn{1}{c}{\bf Aspect Detection Model}  &\multicolumn{1}{c}{\bf Recall}  &\multicolumn{1}{c}{\bf Precision} \\ \hline
+Sliding Window Classifier \textsuperscript{1} & 92.45\%  & 99.15\%\\
+&\\
+\end{tabular}
+\begin{tabular}{lll}
+\multicolumn{1}{c}{\bf Sentiment Model}  &\multicolumn{1}{c}{\bf 3-class Accuracy} &\multicolumn{1}{c}{\bf 5-class Accuracy} \\ \hline
+ Convolutional Neural Network \textsuperscript{1} & 79.63\% & 64.78\% \\
+ Pre-trained out-of-domain RNTN [7]\textsuperscript{2}       & 51.1\% & 42.3\% \\
+ Lexicon-based heuristic	& 75.25\% & -- \\
+\end{tabular}
+\end{center}
+\caption{Performance of different models. Top: Recall of the RNN in our aspect detection model. Bottom: Accuracies on the sentiment analysis task. \textsuperscript{1} is described in Fig. \ref{architecture} and was trained in domain, while \textsuperscript{2} is an RNTN pre-trained on movie review data. The interpretation is discussed more in text.}
+\label{ModelResultsTable}
+\end{table}
 
+\subsubsection{Pre-labeling}
+Using the aforementioned steps, we obtained the 6,000 labeled examples which consisted of an identified aspect in the middle, surrounded by a context window of 5 words on both sides. We padded these phrases with sentence start and end tags and zero vectors. Next, we manually re-labeled these 6,000 examples on a 5 point scale, corresponding to Very Negative, Negative, Neutral, Positive, and Very Positive. 
+
+Our lexicon-based heuristic has an \textbf{75.25\%} classification accuracy with 3 classes, i.e. only 24.75\% of the 6,000 examples has to be re-labeled into 5 classes. This pre-labeling greatly sped up our labeling process to approximately 8 man-hours for all 6,000 examples. This heuristic also provides us with a baseline accuracy for our CNN sentence classification model.
+
+Our decision for labeling 6,000 examples was so that it can be comparable to existing sentiment-labeled datasets out there (e.g. the Beer Advocate dataset and Camera Review dataset reported in [6] had about 8,000 and 4,000 labeled sentences respectively).
 
 % Socher's model (down the rows) vs. human labels. So there were 16 instances that human says 2 and model says 1.
 %							True Labels
@@ -184,36 +208,14 @@ We extracted sentences with aspects that were within our discovered aspect list,
 %5			0		0		9		65		16		90
 %			428		1171		2440		1233		728		6000
 
-As our data was entirely unlabeled, we initially attempted to bootstrap training of our CNN model using labels obtained from other trained sentiment-analysis models. We felt, however, that this would be a major limitation, as we would have labels of uncertain quality and accuracy (we discuss this more below). Hence, to properly evaluate our approach, we decided to hand label some data and use a semi-supervised approach to build a larger model. Unfortunately we did not complete our ambitious, semi-supervised goal. Below, we report our quantitative evaluation.
+\subsubsection{Convolutional Neural Network Sentiment Classifier}
+We trained our CNN on using the 6,000 labeled examples and evaluated using 10-fold cross validation. The results are given in Table \ref{ModelResultsTable}. The CNN, with 3 filters of size 3, 4 and 5 and hidden layer dimensions of 300 achieved an accuracy of \textbf{64.78\%} on the 5-class (\textit{very positve, positive, neutral, negative, very negative}) classification, and \textbf{79.63\%} on the coarser 3-class (\textit{positve, neutral, negative}) classification task.
 
-Using the first model developed above, we extracted 6,000 examples which consisted of an identified aspect, surrounded by a context of 5 words on either side. We padded these phrases with sentence start and end tags, and with zero vectors. Next, we hand-labeled these 6,000 examples on a 5 point scale, corresponding to Very Negative, Negative, Neutral, Positive, and Very Positive. 
+We also considered the possibility of using existing pre-trained sentiment classification models to test on the discovered aspect (as opposed to training a sentiment classifier as we did). For instance, there are recursive neural network models (e.g. Socher et al [7]) that are trained on larger and more granular labeled data. However, these models are often trained on other domains ([7] was trained on movie reviews) and it is still an open question as to the degree of cross-domain generalization. To test this, we ran the model (as implemented in Stanford CoreNLP Sentiment Analysis [7]) on our 6,000 labeled examples. The 5-class accuracy was 42.3\%, while the 3 class accuracy was 51.1\%.
 
-We trained our CNN on this dataset, using a 10-fold cross validation strategy and reporting on a 10\% test set. The results are given in Table \ref{ModelResultsTable}. The CNN, with <hyperparameters FIXME> achieved an accuracy of FIXME on the 5 class classification, and, if we combined the classes to a coarser, 3 class (Positve, Neutral, Negative) task, achieved an accuracy of FIXME.
+The difference in accuracy was largely a result of testing the model out of domain (while our model was trained within domain). In particular, there are words that most likely do not exist in the vocabulary of [7] (e.g. words like "motherboard" and "pixel\_density"). We note, however, that [7] reported a test accuracy on their own dataset of 45.7\% on a 5-class task---a performance that is comparable to what we found.
 
-Next, we sought to test our original idea of ``bootstrapping" labels using existing pre-trained models. On the one hand, there are models that are trained on much larger amounts of labeled data, sometimes even down to the unigram level, e.g. Socher et al [7]. On the other hand, these models are often trained on other domains ([7] was trained on movie reviews), and it is still an open question as to the degree of cross-domain transfer. To test this, we ran the Stanford CoreNLP Sentiment Annotator [7], which also outputs 5 classes, on our 6,000 labeled examples. The 5-class accuracy was 42.3\%, while the coarser 3 class accuracy was 51.1\%.
-
-We must be upfront and say that our point of performing this was \textbf{not} to use [7] as a baseline for comparison: indeed, it was trained out of domain, while our model was trained within domain. (Note, however, that [7] reported a test accuracy within their own dataset of 45.7\% on a 5 class task, so their performance is comparable to what we found.) Rather, we performed this analysis to gauge the upper limit on our model's reliability if it were only trained using labels obtained from out-of-domain pre-trained models (which, this analysis shows, has ~50\% accuracy with respect to a labeled gold standard on a 5 class task).
-
-\begin{table}[t]
-\begin{center}
-\begin{tabular}{lll}
-\multicolumn{1}{c}{\bf Aspect Detection Model}  &\multicolumn{1}{c}{\bf Recall}  \\ \hline
-Sliding Window Classifier \textsuperscript{1} & 8X.X\% \textbf{(FIXME)} \\
-&\\
-\end{tabular}
-\begin{tabular}{lll}
-\multicolumn{1}{c}{\bf Sentiment Model}  &\multicolumn{1}{c}{\bf 3-class Accuracy} &\multicolumn{1}{c}{\bf 5-class Accuracy} \\ \hline
- Convolutional Neural Network \textsuperscript{1} & 79.4\% \textbf{(FIXME)} & 64\% \textbf{(FIXME)} \\
- Pre-trained out-of-domain RNTN [7]\textsuperscript{2}       & 51.1\% & 42.3\% \\
-\end{tabular}
-\end{center}
-\caption{Performance of different models. Top: Recall of the RNN in our aspect detection model. Bottom: Accuracies on the sentiment analysis task. \textsuperscript{1} is described in Fig. \ref{architecture} and was trained in domain, while \textsuperscript{2} is an RNTN pre-trained on movie review data. The interpretation is discussed more in text.}
-\label{ModelResultsTable}
-\end{table}
-
-
-
-\subsection{Qualitative evaluation of sentiment}
+\subsection{Qualitative Evaluation of Overall Method}
 
 \textbf{Evaluation}: We will construct word cloud visualizations color coded to express sentiment. We will also perform comparisons with ``expert review" sites like CNET and DPReview (e.g. DPReview specifically rates digital cameras along certain chosen dimensions).
 
@@ -232,9 +234,9 @@ word cloud
 size = frequency of aspect over several reviews
 color = valence
 
-\section{Discussion}
+\section{Future Work}
+semi-supervised approach (less labeling cost)
 
-Even our mediocre labeling (6000 examples) was comparable with many existing datasets out there (e.g. the Beer Advocate dataset and Camera Review dataset reported in [6] had about 8,000 and 4,000 labeled sentences respectively).
 
 \section{Conclusion}
 
