--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -54,7 +54,7 @@ Previous work in \textit{aspect-level sentiment analysis}---identifying the sent
 
 \section{Introduction}
 
-In this day and age, consumers have unprecedented access to a deluge of information about products---most notably reviews written by other consumers---with which to make his or her purchase decisions. Unfortunately, sifting through hundreds of reviews across tens of different websites to acquire specific information about the product and its important attributes (e.g. \textit{battery life}, \textit{screen size}, or \textit{weight} in the case of electronic products) is a time-consuming chore. Aspect-level sentiment analysis would allow consumers to effortlessly compare general sentiments of various aspects of multiple similar products.
+In this day and age, consumers have unprecedented access to a deluge of information about products---most notably, reviews written by other consumers---with which to make his or her purchase decisions. Unfortunately, sifting through hundreds of reviews across tens of different websites to acquire specific information about the product and its important attributes (e.g. \textit{battery life}, \textit{screen size}, or \textit{weight} in the case of electronic products) is a time-consuming chore. Aspect-level sentiment analysis would allow consumers to effortlessly compare general sentiments of various aspects of multiple similar products.
 
 However, one of the biggest challenges in training aspect-specific sentiment analysis models is the lack of large datasets labeled with sentiment on the aspect-level (most datasets with sentiment labels existed on a document level). In this report, we propose a scalable method for extracting and classifying aspect-specific sentiments that is largely unsupervised. To do this, we tackle two separate but interconnected components of this problem: 1) discovery of aspects, and 2) aspect-specific sentiment classification.
 
