Added future work

--- a/final_writeup/final.tex
+++ b/final_writeup/final.tex
@@ -242,6 +242,8 @@ One problem with aspect-specific sentiment analysis in product reviews is that m
 
 
 \section{Future Work}
+We would like to explore a semi-supervised or active learning approach as an alternative to labeling large quantities of examples after pre-labeling for training a fully supervised model. In this case, we will have to label significantly less examples which will in turn save us time and cost. The proposed method as a whole would also be more cost efficient and scalable.
+
 semi-supervised approach (less labeling cost)
 
 
